--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.R linguist-detectable=true
+*.csharp linguist-detectable=false  
+*.java linguist-detectable=false  
+*.js linguist-detectable=false  
+*.html linguist-detectable=false  
+*.xml linguist-detectable=false 
+*.css linguist-detectable=false
+*.scss linguist-detectable=false
